# birdaero-vibration-poc

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  pyproject.toml
.claude/agents/: ai-researcher.md
.claude/skills/sdlc/: SKILL.md
configs/: poc.yaml
docs/: phase3_fno_plan.md
docs/sdlc/: experience_log.md
notebooks/: demo.ipynb  fno_validate.py  train_colab.ipynb
scripts/: demo.py  predict.py  run_app.py  train.py
src/vibration_poc/: app.py  engine.py  physics.py
src/vibration_poc/dataset/: config.py  dataloader.py  download.py  grid_dataloader.py  grid_interpolation.py  mesh_loader.py  preprocess.py  preprocess_grid.py
src/vibration_poc/inference/: analyze.py  predict.py  predict_fno.py
src/vibration_poc/model/: __init__.py  fno.py  meshgraphnet.py
src/vibration_poc/training/: trainer.py  trainer_fno.py
src/vibration_poc/visualization/: deformation.py  error_maps.py  frequency_analysis.py  plotly_viz.py
tests/: conftest.py  test_dataloader.py  test_dataset.py  test_engine.py  test_fno.py  test_grid_interpolation.py  test_inference.py  test_mesh_loader.py  test_model.py  test_notebook_smoke.py  test_physics.py  test_plotly_viz.py  test_preprocess.py  test_smoke.py  test_training.py  test_visualization.py
