[project]
name = "birdaero-vibration-poc"
version = "0.1.0"
description = "Physics-informed ML for structural deformation prediction - Bird Aero POC"
readme = "README.md"
authors = [
    { name = "orireshef", email = "ori.reshef32@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "torch>=2.2.0",
    "numpy>=1.24",
    "matplotlib>=3.8",
    "scipy>=1.12",
    "h5py>=3.10",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "tqdm>=4.60",
    "tfrecord>=1.14.6",
]

[project.optional-dependencies]
physicsnemo = ["nvidia-physicsnemo>=2.0.0"]
pyg = ["torch-geometric>=2.5"]
notebook = ["jupyter>=1.0", "ipywidgets>=8.0"]
demo = ["streamlit>=1.30", "plotly>=5.18"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vibration_poc"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "mypy>=1.8",
    "ruff>=0.9",
    "pre-commit>=3.6",
    "nbclient>=0.10.4",
    "ipykernel>=7.2.0",
]

# =============================================================================
# mypy (strict mode)
# =============================================================================
[tool.mypy]
strict = true
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true

[[tool.mypy.overrides]]
module = [
    "torch.*",
    "torch_geometric.*",
    "h5py.*",
    "scipy.*",
    "matplotlib.*",
    "mpl_toolkits.*",
    "tqdm.*",
    "tfrecord.*",
    "yaml.*",
    "plotly.*",
    "streamlit.*",
]
ignore_missing_imports = true

# =============================================================================
# ruff
# =============================================================================
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]
exclude = ["notebooks/*.py"]

[tool.ruff.lint]
select = [
    "E", "F", "W", "I", "UP", "B", "C4", "SIM",
    "TCH", "RUF", "PT", "PIE", "PL", "PERF",
]
ignore = ["PLR0913", "PLR2004", "PLC0415", "PLR0912", "PERF402", "TC001", "TC003", "SIM105"]

[tool.ruff.lint.isort]
known-first-party = ["vibration_poc"]

# =============================================================================
# pytest
# =============================================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
    "--strict-markers",
    "--cov=src/vibration_poc",
    "--cov-report=term-missing",
    "--cov-fail-under=80",
]
markers = [
    "slow: long-running tests",
    "integration: requires dataset download",
    "gpu: requires GPU",
]

[tool.coverage.run]
omit = ["src/vibration_poc/app.py"]
